--- a/apk/res/values-de-watch/strings.xml
+++ b/apk/res/values-de-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"Immer"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"Beim Verwenden der App"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"Immer"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"Fitness &amp; Wohlbefinden"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"Fitness &amp; Wellness"</string>
 </resources>
