--- a/apk/res/values-ja-watch/strings.xml
+++ b/apk/res/values-ja-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"常時"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"アプリの使用中"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"常時"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"フィットネスとウェルネス"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"フィットネスとウ⁠ェ⁠ル⁠ネ⁠ス"</string>
 </resources>
