--- a/apk/res/values-pl-watch/strings.xml
+++ b/apk/res/values-pl-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"Cały czas"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"Gdy używasz aplikacji"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"Cały czas"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"Fitness i dbanie o zdrowie"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"Aktywność fizyczna i samopoczucie"</string>
 </resources>
