--- a/apk/res/values-ru-watch/strings.xml
+++ b/apk/res/values-ru-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"Всегда"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"При использовании"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"Всегда"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"Фитнес и здоровье"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"Физическая активность и самочувствие"</string>
 </resources>
