--- a/apk/res/values-sk-watch/strings.xml
+++ b/apk/res/values-sk-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"Po celý čas"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"Pri používaní aplikácie"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"Po celý čas"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"Kondícia a kvalita života"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"Kondícia a zdravie"</string>
 </resources>
