--- a/apk/res/values-sw-watch/strings.xml
+++ b/apk/res/values-sw-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"Muda wote"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"Unapotumia programu"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"Muda wote"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"Mazoezi na siha"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"Siha na afya"</string>
 </resources>
