--- a/apk/res/values-ur-watch/strings.xml
+++ b/apk/res/values-ur-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"ہر وقت"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"ایپ استعمال کرنے کے دوران"</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"ہر وقت"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"تندرستی اور بہبودی"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"تندرستی اور بہبود"</string>
 </resources>
